feat: Create method to add new books to myLibrary

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<!-- Link to this project: https://www.theodinproject.com/lessons/javascript-library -->
+<!-- Link to project specs: https://www.theodinproject.com/lessons/javascript-library -->
 <!-- 
   Recall:
+  <table>Table Element</table>
+  <caption>Summary of our table</caption>
+  <colgroup>Add style to specific columns</colgroup>
+  <thead>Headers of Table</thead>
+  <tbody>Body of Table</tbody>
   <th>Table Headers</th>
   <tr>Table Row</tr> 
   <td>Table Data (~cells)</td>
@@ -10,7 +15,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>myLibrary</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -18,7 +23,7 @@
     <!-- TODO: Display ONE existing book in our newly created table. -->
     <table>
       <caption>
-        bookLibrary is an app to keep track of your books.
+        book_library is an app to keep track of your books.
       </caption>
       <colgroup>
         <col span="2" />
