feat: Create Book class with relevant fields

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myLibrary</title>
-    <script src="script.js" defer></script>
+    <script src="script_old.js" defer></script>
     <script src="dialog.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -14,8 +14,8 @@
         "The myLibrary app helps you keep track of your books."
       </caption>
       <colgroup>
-        <col span="2" />
-        <col style="2" />
+        <col span="10" />
+        <col style="10" />
       </colgroup>
       <thead>
         <tr>
