feat: Have Book class extend Reading class

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </thead>
       <tbody id="tbody"></tbody>
     </table>
-    <button id="add-btn" style="margin-left: 0.25rem">Add New Book</button>
+    <button id="add-book-btn" style="margin-left: 0.25rem">Add New Book</button>
     <div>
       <dialog id="show-info-dialog">
         <div id="book-info"></div>
