--- a/js_classes.html
+++ b/js_classes.html
@@ -24,5 +24,10 @@
       </thead>
       <tbody id="tbody"></tbody>
     </table>
+    <button id="add-book-btn">
+      Add New Book
+    </button>
+    <div>
+    </div>
   </body>
 </html>
