--- a/js_classes.html
+++ b/js_classes.html
@@ -29,5 +29,35 @@
     </button>
     <div>
     </div>
+    <div>
+      <dialog id="add-book-dialog">
+        <p>Add New Book</p>
+        <form action="" id="form">
+          <ul>
+            <li>
+              <label for="title">Title</label><br />
+              <input type="text" id="title" name="title" />
+            </li>
+            <li>
+              <label for="author">Author</label><br />
+              <input type="text" id="author" name="author">
+            </li>
+            <li>
+              <label for="pages"># of pages</label><br />
+              <input type="text" id="pages" name="pages" />
+            </li>
+            <li>
+              <input type="checkbox" id="read" name="read" />
+              <label for="read">Check if already read</label>
+            </li>
+            <li>
+              <label for="bookcover">Bookcover Type</label>
+              <input type="text" id="bookcover" name="bookcover">
+            </li>
+          </ul>
+          <input type="submit" id="btn-submit" />
+        </form>
+      </dialog>
+    </div>
   </body>
 </html>
