--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
       </form>
     </dialog>
   </div>
+  <div>
+    <dialog id="show-info-dialog">
+      <div id="book-info"></div>
+      <button id="show-info-close-btn" autofocus type="button">Close</button>
+    </dialog>
+  </div>
 </body>
 
 </html>
